--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 		<meta name="robots" content="index, follow" />
 		<meta name="revisit-after" content="14 days" />
 			
-		<title>Pascal van Gemert - Web Developer - Interactive Resume</title>
+		<title>Mutahir Sohail  - JavaScript Developer - Interactive Resume</title>
 		
 		<!-- Bootstrap core CSS -->
-		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
+		<!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" /> -->
 		<link href="./view/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="./view/styles.css" rel="stylesheet" />
-		
+<!-- 		
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
 		
 		<!--[if lt IE 9]>
 			<script src="/view/js/html5shiv.js"></script>
@@ -1947,7 +1947,9 @@
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->		
 		<!-- Bootstrap core JavaScript -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+		<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 		<script type="text/javascript" src="./view/js/script.js"></script>
 		<script type="text/javascript" src="./view/js/bootstrap.min.js"></script>
 		
