--- a/index.html
+++ b/index.html
@@ -1947,7 +1947,7 @@
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->		
 		<!-- Bootstrap core JavaScript -->
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 		<!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> -->
 		<script type="text/javascript" src="./view/js/script.js"></script>
