--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			I am an allround javascript developer. I am a professional front end developer with expertise in Angular and good knowledge of back-end api development too. Code scalability, optimization and structure is what I love during coding.Problem solving is one of my best traits and this has helped me a lot improving my attention to detail in development. Lastly , team collaboration is one of the most beautiful aspect of product development and I enjoy working as a team.
 		</div>
 	<div class="col-md-4 text-center">
-		<img src="./view/images/pascal_van_gemert.png" alt="Pascal van Gemert" width="246" height="246" />
+		<img src="./view/images/1517044907635.jpg" alt="Pascal van Gemert" width="246" height="246" />
 	</div>
 	<div class="col-md-4">
 		<h3>Details</h3>
